update menu bar

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,7 +5,7 @@
     <string name="matkhau">Password</string>
     <string name="ngaysinh">Birthday</string>
     <string name="cmnd">ID Card</string>
-    <string name="dongy">Yes</string>
+    <string name="dongy">Save</string>
     <string name="thoat">Exit</string>
     <string name="dangky">Create an acount</string>
     <string name="nhaptendangnhap">You don't enter username</string>
