--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="matkhau">Mật khẩu</string>
     <string name="ngaysinh">Ngày sinh</string>
     <string name="cmnd">Chứng minh nhân dân</string>
-    <string name="dongy">Đồng ý</string>
+    <string name="dongy">Lưu</string>
     <string name="thoat">Thoát</string>
     <string name="dangky">Đăng ký</string>
     <string name="nhaptendangnhap">Bạn chưa nhập tên đăng nhập</string>
